Fixed spacing in footer

--- a/themes/ipis/less/ipis.less
+++ b/themes/ipis/less/ipis.less
@@ -109,7 +109,7 @@ header .banner.container.navbar .search {
     display: flex;
     flex-direction: row;
     width: 100%;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding: 8px 15px;
     margin-top: 20px;
     //background-color: #f5f5f5;
